# serverless-effortless

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml  setup.cfg
config/: .env.dist
serverless/: handler.py  settings.py
serverless/project/: send_email.py  subscribe.py  unsubscribe.py  utils.py
slides/assets/: header.json  header.jsonp
slides/assets/0039A726-309A-4B12-A273-C961B0F755E3/: 0039A726-309A-4B12-A273-C961B0F755E3.json  0039A726-309A-4B12-A273-C961B0F755E3.jsonp
slides/assets/01771875-5266-4FA1-B865-90FC468AD2B0/: 01771875-5266-4FA1-B865-90FC468AD2B0.json  01771875-5266-4FA1-B865-90FC468AD2B0.jsonp
slides/assets/0516DB4A-86A2-4FDA-8AE8-3ACFBDE7834A/: 0516DB4A-86A2-4FDA-8AE8-3ACFBDE7834A.json  0516DB4A-86A2-4FDA-8AE8-3ACFBDE7834A.jsonp
slides/assets/08EC6E92-757B-440B-9859-158679622F56/: 08EC6E92-757B-440B-9859-158679622F56.json  08EC6E92-757B-440B-9859-158679622F56.jsonp
slides/assets/0AD63ED3-6710-405F-9F1B-433A73D77F11/: 0AD63ED3-6710-405F-9F1B-433A73D77F11.json  0AD63ED3-6710-405F-9F1B-433A73D77F11.jsonp
slides/assets/10F72421-8643-4B64-AB01-3F72E7FEF7A5/: 10F72421-8643-4B64-AB01-3F72E7FEF7A5.json  10F72421-8643-4B64-AB01-3F72E7FEF7A5.jsonp
slides/assets/1614A0B9-3526-4218-B05D-47A39096B777/: 1614A0B9-3526-4218-B05D-47A39096B777.json  1614A0B9-3526-4218-B05D-47A39096B777.jsonp
slides/assets/1749EBCC-7153-4C00-B55B-413548CA72E7/: 1749EBCC-7153-4C00-B55B-413548CA72E7.json  1749EBCC-7153-4C00-B55B-413548CA72E7.jsonp
(+149 files in other folders)
